vlib/v/checker/tests/enum_field_value_duplicate_b.out
vlib/v/checker/tests/enum_field_value_duplicate_b.vv:4:2: error: enum value `0` already exists
    2 |     red // 0
    3 |     green = -1
    4 |     blue // -1 + 1 = 0
      |     ~~~~
    5 | }
